removed less important list columns on mobile to prevent overflow

--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -11,3 +11,17 @@ tbody tr:hover {
   /* font-weight: bold; */
   cursor: pointer;
 }
+
+.container {
+  padding: 0;
+}
+
+@media (max-width: 640px)
+{
+
+    .mobile-disable
+    {
+        display: none;
+    }
+
+}
